# aifastdb-devplan

./: .gitignore  .probe_clean_anchor.json  .probe_clean_flow.json  .tmp-code-intel-diagnostics.mts  .tmp-code-intel-exports.mts  .tmp-code-intel-fresh-graph.mts  .tmp-code-intel-graph.mts  .tmp-code-intel-hints.mts  .tmp-code-intel-ir.mts  .tmp-code-intel-map.mts  .tmp-code-intel-nodes.mts  DEVPLAN.md  DEVPLAN_ReadMe.md  LICENSE  README.md  dev-plan-management.mdc  generate_ppt_v1 copy.py  generate_ppt_v1.py  generate_ppt_v2.py  migrate-task-doc.js  package-lock.json  package.json  pnpm-lock.yaml  tmp-code-intel-3223.html  tmp-code-intel-3224.html  tmp-code-intel-3225.html  tmp-code-intel-inline-3223.js  tmp-code-intel-inline-3224.js  tmp-code-intel-inline-3225.js  tmp-graph.json  tmp-inline-3212.js  tmp-inline-3216.js  tmp-inline.js  tmp-pages-script.js  tmp-visual.html  tmp-zeroclaw-docs-3211.json  tmp-zeroclaw-graph-3211.json  tmp_live_script_check.js  tsconfig.json
.cursor/: mcp.json
.devplan/: config.json
docs/: aifastdb-devplan-overview.md  test-visualization-framework.md
executor/: pyproject.toml  start-disable-vision.bat  start.bat  start.ps1
executor/src/: __init__.py  config.py  cursor_controller.py  devplan_client.py  engine.py  log_monitor.py  main.py  recovery_manager.py  ui_server.py  vision_analyzer.py
executor/templates/: index.html
executor/tests/: test_dual_channel.py  test_memory_driven_recovery_e2e.py  test_network_resilience.py  test_recovery_manager.py  test_ui_server.py
scripts/: migrate-relations.ts  start-mcp.cmd  start-mcp.sh
(+143 files in other folders)
